Openshift\K8s/lab10/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-lab10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: web
        image: asemmohamed321/lab10:lab
        ports:
        - containerPort: 80
