Openshift\K8s/lab10/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort

~
